--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "php": ">=5.3.0",
         "illuminate/support": "4.0.x",
         "baum/baum": "~1.0",
-        "cviebrock/eloquent-sluggable": "1.0.*"
+        "cviebrock/eloquent-sluggable": "1.0.*",
+        "vespakoen/menu": "dev-master"
     },
     "autoload": {
         "classmap": [
